--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,20 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:gravity="center">
 
         <Button
-            android:layout_width="fill_parent"
+            android:id="@+id/buttonLevel1"
+            android:layout_width="500dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:layout_marginEnd="40dp"
             android:layout_marginStart="40dp"
-            android:layout_marginBottom="5dp"
-            android:textAllCaps="false"
-            android:text="Level 1"/>
+            android:text="Level 1"
+            android:textAllCaps="false" />
         <Button
-            android:layout_width="fill_parent"
+            android:id="@+id/buttonLevel2"
+            android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
             android:layout_marginStart="40dp"
@@ -31,14 +31,17 @@
             android:textAllCaps="false"
             android:text="Level 2"/>
         <Button
-            android:layout_width="fill_parent"
+            android:id="@+id/buttonLevel3"
+            android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
             android:layout_marginStart="40dp"
             android:textAllCaps="false"
-            android:text="Level 3"/>
+            android:text="Level 3" />
 
         
     </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
