--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -8,21 +8,49 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height= "match_parent"
-            android:src="@mipmap/background_rose"
-            android:layout_gravity="center">
+            android:layout_height="1000dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/background_rose">
         </ImageView>
-
-        <ImageButton
-            android:id="@+id/0"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/questionText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_point" />
+            android:gravity="center"
+            android:layout_below="@+id/imageView"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:text="Jooooojfklsda"/>
+        <GridLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/questionText"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:columnCount="2"
+            android:rowCount="3">
+
+            <Button
+                android:layout_height="wrap_content"
+                android:layout_width="300dp"
+                android:layout_column="0"
+                android:layout_row="0"
+                android:text="Hello"
+                android:layout_columnWeight="4dp"
+                />
+        </GridLayout>
+
+
 
     </RelativeLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
